# docs/go-api/swagger.json
@@ -60,7 +60,34 @@
         },
         "/users/{id}": {
             "get": {
-                "responses": {}
+                "description": "Display user details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Display user details",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user_model.User"
+                        }
+                    }
+                }
             }
         }
     },
@@ -68,21 +95,13 @@
         "user_model.User": {
             "type": "object",
             "required": [
-                "location",
-                "name",
-                "title"
+                "name"
             ],
             "properties": {
                 "id": {
                     "type": "string"
                 },
-                "location": {
-                    "type": "string"
-                },
                 "name": {
-                    "type": "string"
-                },
-                "title": {
                     "type": "string"
                 }
             }
