# module/user/model/user.model.go
@@ -5,6 +5,4 @@ import "go.mongodb.org/mongo-driver/bson/primitive"
 type User struct {
     Id       primitive.ObjectID `json:"id,omitempty"`
     Name     string             `json:"name,omitempty" validate:"required"`
-    Location string             `json:"location,omitempty" validate:"required"`
-    Title    string             `json:"title,omitempty" validate:"required"`
 }
